tests/baselines/reference/genericTypeWithMultipleBases2.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
genericTypeWithMultipleBases2.ts(14,1): error TS2454: Variable 'x' is used before being assigned.
genericTypeWithMultipleBases2.ts(15,1): error TS2454: Variable 'x' is used before being assigned.
genericTypeWithMultipleBases2.ts(16,1): error TS2454: Variable 'x' is used before being assigned.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== genericTypeWithMultipleBases2.ts (3 errors) ====
    export interface I1 {
        m1: () => void;
    }
     
    export interface I2 {
        m2: () => void;
    }
     
    export interface I3<T> extends I2, I1 {
        p1: T;
    }
     
    var x: I3<number>;
    x.p1;
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    x.m1();
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    x.m2();
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    
    